--- a/HedgeModManager/UI/AboutModWindow.xaml
+++ b/HedgeModManager/UI/AboutModWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HedgeModManager"
-        mc:Ignorable="d"
+        mc:Ignorable="d" PreviewKeyDown="AboutModWindow_OnPreviewKeyDown"
         Title="AboutModWindow" MinWidth="300" Height="Auto" Width="Auto" MaxHeight="600" SizeToContent="WidthAndHeight" ResizeMode="NoResize"
         Style="{StaticResource HedgeWindow}" ContentRendered="Window_ContentRendered" WindowStartupLocation="CenterScreen">
     
