--- a/HedgeModManager/UI/ExceptionWindow.xaml
+++ b/HedgeModManager/UI/ExceptionWindow.xaml
@@ -80,7 +80,7 @@
     </Window.Resources>
     <Grid>
         <Label x:Name="Header" Content="Hedge Mod Manager has thrown an Exception!" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="62" Width="780" FontSize="36" Foreground="#0066CC"/>
-        <TextBox x:Name="TextBox_ExceptionInfo" Margin="10,77,10,70" Text="Exception Info goes here" />
+        <TextBox x:Name="TextBox_ExceptionInfo" Margin="10,77,10,70" Text="Exception Info goes here" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" />
         <Grid Margin="10,0,10,10" VerticalAlignment="Bottom" Height="44">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
