Fixed some grammar errors and polished translation

--- a/HedgeModManager/Languages/pt-PT.xaml
+++ b/HedgeModManager/Languages/pt-PT.xaml
@@ -13,15 +13,15 @@
     <system:String x:Key="CommonUIDelete">Apagar</system:String>
     <system:String x:Key="CommonUINone"  >Nenhum</system:String>
     <system:String x:Key="CommonUIIgnore">Ignorar</system:String>
-    <system:String x:Key="CommonUIWarning">AVISO</system:String>
+    <system:String x:Key="CommonUIWarning">Aviso</system:String>
 
     <!-- Main UI Strings -->
     <system:String x:Key="MainUIMods"          >Mods</system:String>
     <system:String x:Key="MainUICodes"         >Códigos</system:String>
     <system:String x:Key="MainUISettings"      >Definições</system:String>
-    <system:String x:Key="MainUIRemoveMod"     >Remover Mod</system:String>
-    <system:String x:Key="MainUIAddMod"        >Adicionar Mod</system:String>
-    <system:String x:Key="MainUIRefreshModList">Atualizar Lista de Mods</system:String>
+    <system:String x:Key="MainUIRemoveMod"     >Remover mod</system:String>
+    <system:String x:Key="MainUIAddMod"        >Adicionar mod</system:String>
+    <system:String x:Key="MainUIRefreshModList">Atualizar a lista de mods</system:String>
     <system:String x:Key="MainUISave"          >Guardar</system:String>
     <system:String x:Key="MainUISaveAndPlay"   >Guardar e Jogar</system:String>
     <system:String x:Key="MainUIPlay"          >Jogar</system:String>
@@ -30,7 +30,7 @@
     <system:String x:Key="ModsUIName"           >Nome</system:String>
     <system:String x:Key="ModsUIVersion"        >Versão</system:String>
     <system:String x:Key="ModsUIAuthor"         >Autor</system:String>
-    <system:String x:Key="ModsUISupportSave"    >Suporta Gravação</system:String>
+    <system:String x:Key="ModsUISupportSave"    >Suporta gravação</system:String>
     <system:String x:Key="ModsUIHasUpdate"      >Atualizações</system:String>
     <system:String x:Key="ModsUIModDescription" >Descrição</system:String>
     <system:String x:Key="ModsUIModConfigure"   >Configurar mod</system:String>
@@ -38,25 +38,25 @@
     <system:String x:Key="ModsUIModCheckUpdates">Verificar por atualizações</system:String>
     <system:String x:Key="ModsUIModEdit"        >Editar mod</system:String>
     <system:String x:Key="ModsUIModDelete"      >Remover mod</system:String>
-    <system:String x:Key="ModsUIModDragDrop"    >Arrasta items para alterar a ordem de carregamento de mods.</system:String>
+    <system:String x:Key="ModsUIModDragDrop"    >Arrasta itens para alterar a ordem de carregamento dos mods.</system:String>
 
     <!-- Codes UI Strings -->
     <system:String x:Key="CodesUIName"    >Nome</system:String>
-    <system:String x:Key="CodesUIDownload">Transferir Códigos da Comunidade</system:String>
+    <system:String x:Key="CodesUIDownload">Transferir códigos da comunidade</system:String>
 
     <!-- Settings UI Strings -->
     <!--   Game & Mod Loader -->
-    <system:String x:Key="SettingsUIGMLHeader"      >Jogo &amp; Carregador de Mods</system:String>
-    <system:String x:Key="SettingsUIInstallLoader"  >Instalar o Carregador de Mods</system:String>
-    <system:String x:Key="SettingsUIUninstallLoader">Desinstalar o Carregador de Mods</system:String>
-    <system:String x:Key="SettingsUIOpenMods"       >Abrir Diretoria de Mods</system:String>
+    <system:String x:Key="SettingsUIGMLHeader"      >Jogo e carregador de mods</system:String>
+    <system:String x:Key="SettingsUIInstallLoader"  >Instalar o carregador de mods</system:String>
+    <system:String x:Key="SettingsUIUninstallLoader">Desinstalar o carregador de mods</system:String>
+    <system:String x:Key="SettingsUIOpenMods"       >Abrir o diretório de mods</system:String>
     <system:String x:Key="SettingsUIEnableML"       >Ativar o carregador de mods</system:String>
-    <system:String x:Key="SettingsUIEnableDebug"    >Ativar consola de depuração</system:String>
+    <system:String x:Key="SettingsUIEnableDebug"    >Ativar a consola de depuração</system:String>
     <system:String x:Key="SettingsUIEnableSRedir"   >Ativar redirecionamento do ficheiro de gravação</system:String>
     <system:String x:Key="SettingsUILoadTopBottom"  >Carregar de cima para baixo</system:String>
     <system:String x:Key="SettingsUILabelLoaders"   >Carregadores:</system:String>
     <system:String x:Key="SettingsUILabelGame"      >Jogo:</system:String>
-    <system:String x:Key="SettingsUILabelMDir"      >Diretoria de Mods:</system:String>
+    <system:String x:Key="SettingsUILabelMDir"      >Diretório de mods:</system:String>
     <!--   Hedge Mod Manager -->
     <system:String x:Key="SettingsUIHMMHeader"      >Hedge Mod Manager</system:String>
     <system:String x:Key="SettingsUICheckMLUpdate"  >Verificar por atualizações do carregador de mods</system:String>
@@ -70,9 +70,9 @@
     <system:String x:Key="MainUIInstallFormHeader"   >Instalar um mod através de...</system:String>
     <system:String x:Key="MainUIInstallFormOptionDir">Instalar de uma pasta</system:String>
     <system:String x:Key="MainUIInstallFormOptionArc">Instalar de um arquivo</system:String>
-    <system:String x:Key="MainUIInstallFormOptionNew">Criar um (para desenvolvedores!)</system:String>
-    <system:String x:Key="MainUIMissingLoaderHeader" >Carregador de Mods Não Instalado!</system:String>
-    <system:String xml:space="preserve" x:Key="MainUIMissingLoaderDesc"   >De maneira a que {0} possa carregar mods, o carregador de mods precisa de estar instalado.&#x0a;Queres instala-lo agora?</system:String>
+    <system:String x:Key="MainUIInstallFormOptionNew">Criar um (para programadores!)</system:String>
+    <system:String x:Key="MainUIMissingLoaderHeader" >Carregador de mods não instalado!</system:String>
+    <system:String xml:space="preserve" x:Key="MainUIMissingLoaderDesc"   >De maneira a que {0} possa carregar mods, o carregador de mods precisa de estar instalado.&#x0a;Queres instalá-lo agora?</system:String>
     <system:String x:Key="MainUISelectModsDBTitle"   >Seleciona de onde pretendes carregar mods...</system:String>
 
     <!-- OptionsWindow UI Strings -->
@@ -80,7 +80,7 @@
 
     <!-- AboutWindow UI Strings -->
     <system:String x:Key="AboutWindowUITitle">Sobre o Hedge Mod Manager</system:String>
-    <system:String x:Key="AboutWindowUILine1">Um programa desenhado para facilitar o carregamento de mods para a Hedgehog Engine.</system:String>
+    <system:String x:Key="AboutWindowUILine1">Um programa desenhado para facilitar o carregamento de mods para o Hedgehog Engine.</system:String>
     <system:String x:Key="AboutWindowUILine2">Requer uma cópia legal de um dos jogos suportados.</system:String>
     <system:String x:Key="AboutWindowUICredits">Créditos:</system:String>
 
@@ -107,13 +107,13 @@
     <system:String x:Key="StatusUIDeletedMod"             >{0} apagado</system:String>
     <system:String x:Key="StatusUIModsDBSaved"            >Base de dados de mods guardada</system:String>
     <system:String x:Key="StatusUIModsDBLocationChanged"  >Localização da base de dados atualizada</system:String>
-    <system:String x:Key="StatusUIGameChange"             >Jogo mudado para {0}</system:String>
+    <system:String x:Key="StatusUIGameChange"             >Jogo alterado para {0}</system:String>
     <system:String x:Key="StatusUIDownloadingCodes"       >A transferir códigos para {0}</system:String>
     <system:String x:Key="StatusUIDownloadFinished"       >Transferência terminada</system:String>
     <system:String x:Key="StatusUIDownloadFailed"         >A transferência falhou</system:String>
 
     <!-- Dialog UI Strings -->
-    <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">Tens a certeza de que pretendes apagar "{0}"?&#x0a;Esta ação não pode ser desfeita!</system:String>
+    <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">Tens a certeza de que pretendes apagar "{0}"?&#x0a;Esta ação não pode ser anulada!</system:String>
 
 
     <!-- Status UI Lang Stuff Strings -->
