--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -88,6 +88,7 @@
                                                 </DataTemplate>
                                             </GridViewColumn.CellTemplate>
                                         </GridViewColumn>
+                                        <GridViewColumn Header="Author" DisplayMemberBinding="{Binding Author}" Width="Auto"/>
                                     </GridView>
                                 </ListView.View>
                             </ListView>
