--- a/HedgeModManager/Languages/en-AU.xaml
+++ b/HedgeModManager/Languages/en-AU.xaml
@@ -33,7 +33,7 @@
     <system:String x:Key="ModsUISupportSave"    >Supports Save</system:String>
     <system:String x:Key="ModsUIHasUpdate"      >Updates</system:String>
     <system:String x:Key="ModsUIModDescription" >Description</system:String>
-    <system:String x:Key="ModsUIModFavorite"    >Favorite</system:String>
+    <system:String x:Key="ModsUIModFavorite"    >Favourite</system:String>
     <system:String x:Key="ModsUIModConfigure"   >Configure mod</system:String>
     <system:String x:Key="ModsUIModOpenFolder"  >Open containing folder</system:String>
     <system:String x:Key="ModsUIModCheckUpdates">Check for updates</system:String>
